{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 234,
  "lineage": "9057ef36-0285-1c91-3828-99501d6ac4be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-013b7e07123c71ea2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013b7e07123c71ea2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03cd48e5ddb3226db",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_ip": "44.213.99.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e81ba056a88d4855",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b4cd4b44f6ae95d",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04068a39ea913e59a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-00e76c34a84793476",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e76c34a84793476",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01adea76965f59a60",
            "private_dns": "ip-10-0-2-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.87",
            "public_ip": "35.171.6.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de73a28887aff8c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0726a8f48f20cfa18",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04068a39ea913e59a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-03f215028c70aa3dc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f215028c70aa3dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064b926975adf2387",
            "private_dns": "ip-10-0-3-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2c73bc97acd23c0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d02c881fe0e7f95c",
            "tags": {
              "Name": "Webserver-3"
            },
            "tags_all": {
              "Name": "Webserver-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04068a39ea913e59a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:internet-gateway/igw-0d1fdf4737e2945ff",
            "id": "igw-0d1fdf4737e2945ff",
            "owner_id": "975266691648",
            "tags": {
              "Name": "ALB-VPC"
            },
            "tags_all": {
              "Name": "ALB-VPC"
            },
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prac_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/app/prac-lb/acb5986ecece4a57",
            "arn_suffix": "app/prac-lb/acb5986ecece4a57",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prac-lb-830831725.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/app/prac-lb/acb5986ecece4a57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prac-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04068a39ea913e59a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b4cd4b44f6ae95d"
              },
              {
                "subnet_id": "subnet-0726a8f48f20cfa18"
              },
              {
                "subnet_id": "subnet-0d02c881fe0e7f95c"
              }
            ],
            "subnets": [
              "subnet-01b4cd4b44f6ae95d",
              "subnet-0726a8f48f20cfa18",
              "subnet-0d02c881fe0e7f95c"
            ],
            "vpc_id": "vpc-06837a03ec26f4011",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/prac-lb/acb5986ecece4a57/6eb1f24bbe800322",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/prac-lb/acb5986ecece4a57/6eb1f24bbe800322",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/app/prac-lb/acb5986ecece4a57",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.prac_lb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99",
            "arn_suffix": "targetgroup/alb-demo-tg/3496c949cfca4e99",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99-20230820080319095300000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99",
            "target_id": "i-013b7e07123c71ea2"
          },
          "dependencies": [
            "aws_instance.alb_instance",
            "aws_key_pair.deployer",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99-20230820080317878000000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99",
            "target_id": "i-00e76c34a84793476"
          },
          "dependencies": [
            "aws_instance.alb_instance",
            "aws_key_pair.deployer",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99-20230820080318739300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-demo-tg/3496c949cfca4e99",
            "target_id": "i-03f215028c70aa3dc"
          },
          "dependencies": [
            "aws_instance.alb_instance",
            "aws_key_pair.deployer",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "alb-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-053599d13c1bce063",
            "id": "eni-053599d13c1bce063",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:41:ed:8a:36:c7",
            "owner_id": "975266691648",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04068a39ea913e59a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b4cd4b44f6ae95d"
          },
          "dependencies": [
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet1",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "alb-nic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-08273a37600aabc28",
            "id": "eni-08273a37600aabc28",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:db:af:ba:ba:37",
            "owner_id": "975266691648",
            "private_ip": "10.0.2.50",
            "private_ip_list": [
              "10.0.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04068a39ea913e59a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0726a8f48f20cfa18"
          },
          "dependencies": [
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet2",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "alb-nic-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-029c6038837fe6786",
            "id": "eni-029c6038837fe6786",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:73:14:84:dc:4f",
            "owner_id": "975266691648",
            "private_ip": "10.0.3.50",
            "private_ip_list": [
              "10.0.3.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04068a39ea913e59a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d02c881fe0e7f95c"
          },
          "dependencies": [
            "aws_security_group.nlb-sg",
            "aws_subnet.subnet3",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ALB-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-05c2b287dc6eee874",
            "id": "rtb-05c2b287dc6eee874",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1fdf4737e2945ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ALB-RT"
            },
            "tags_all": {
              "Name": "ALB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ed12e3d1085052",
            "route_table_id": "rtb-05c2b287dc6eee874",
            "subnet_id": "subnet-01b4cd4b44f6ae95d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.subnet1",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e70a4d403de8fae7",
            "route_table_id": "rtb-05c2b287dc6eee874",
            "subnet_id": "subnet-0726a8f48f20cfa18"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.subnet2",
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:security-group/sg-04068a39ea913e59a",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04068a39ea913e59a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nlb-sg"
            },
            "tags_all": {
              "Name": "nlb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-01b4cd4b44f6ae95d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b4cd4b44f6ae95d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NLB-Subnet-1"
            },
            "tags_all": {
              "Name": "NLB-Subnet-1"
            },
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-0726a8f48f20cfa18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726a8f48f20cfa18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NLB-Subnet-2"
            },
            "tags_all": {
              "Name": "NLB-Subnet-2"
            },
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-0d02c881fe0e7f95c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d02c881fe0e7f95c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NLB-Subnet-3"
            },
            "tags_all": {
              "Name": "NLB-Subnet-3"
            },
            "vpc_id": "vpc-06837a03ec26f4011"
          },
          "dependencies": [
            "aws_vpc.alb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alb-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc/vpc-06837a03ec26f4011",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049196fdc0e966b1a",
            "default_route_table_id": "rtb-0b4f1dd7834bbe2c4",
            "default_security_group_id": "sg-02c14a419fe58f13a",
            "dhcp_options_id": "dopt-00b696a765a7e9c3c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06837a03ec26f4011",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4f1dd7834bbe2c4",
            "owner_id": "975266691648",
            "tags": {
              "Name": "ALB-VPC"
            },
            "tags_all": {
              "Name": "ALB-VPC"
            }
          }
        }
      ]
    }
  ]
}